Simplified CI Visibility Java onboarding docs in accordance with automatic tracer configuration